--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 	--main-color-strong-cyan: hsl(172, 67%, 45%);
 	--very-dark-cyan: hsl(183, 100%, 15%);
 	--dark-grayish-cyan: hsl(186, 14%, 43%);
-	--lignt-grayish-cyan: hsl(185, 41%, 84%);
+	--light-grayish-cyan: hsl(185, 41%, 84%);
 	--white: hsl(0, 0%, 100%);
 }
 * {
@@ -10,7 +10,7 @@
 	padding: 0;
 }
 body {
-	background-color: var(--lignt-grayish-cyan);
+	background-color: var(--light-grayish-cyan);
 	height: 100vh;
 	font-size: 24px;
 	font-family: 'Space Mono', monospace;
@@ -18,18 +18,31 @@ body {
 	place-items: center;
 }
 .calculator {
+	padding: 2rem;
+	border-radius: 20px;
 	background-color: var(--white);
 	max-width: 1400px;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
+	-webkit-border-radius: 20px;
+	-moz-border-radius: 20px;
+	-ms-border-radius: 20px;
+	-o-border-radius: 20px;
 }
 .calculator-control {
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
+	height: 100%;
 }
+.calculator-control label {
+	font-weight: 400;
+	font-size: 1.2rem;
+	color: var(--dark-grayish-cyan);
+}
+
 .calculator-result {
 	background-color: var(--very-dark-cyan);
 }
