--- a/style.css
+++ b/style.css
@@ -90,6 +90,8 @@ input::-webkit-inner-spin-button {
 	grid-template-columns: 1fr 1fr 1fr;
 }
 .tips__grid .button {
+	transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out,
+		box-shadow 0.2s ease-in-out;
 	cursor: pointer;
 	font-size: 1.5rem;
 	width: 80%;
@@ -99,8 +101,17 @@ input::-webkit-inner-spin-button {
 	color: white;
 	border-radius: 5px;
 	background-color: var(--very-dark-cyan);
+	-webkit-transition: background-color 0.2s ease-in-out,
+		color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+	-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out,
+		box-shadow 0.2s ease-in-out;
+	-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out,
+		box-shadow 0.2s ease-in-out;
+	-o-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out,
+		box-shadow 0.2s ease-in-out;
 }
 .tips__grid .active {
+	box-shadow: 0px 0px 16px 0px var(--main-color-strong-cyan);
 	background-color: var(--main-color-strong-cyan);
 	color: var(--very-dark-cyan);
 }
@@ -179,12 +190,17 @@ input::-webkit-inner-spin-button {
 	border-radius: 5px;
 	cursor: pointer;
 	background-color: var(--main-color-strong-cyan);
-	transition: background-color 0.2s ease-in;
-	-webkit-transition: background-color 0.2s ease-in;
-	-moz-transition: background-color 0.2s ease-in;
-	-ms-transition: background-color 0.2s ease-in;
-	-o-transition: background-color 0.2s ease-in;
+	transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+	-webkit-transition: background-color 0.2s ease-in-out,
+		box-shadow 0.2s ease-in-out;
+	-moz-transition: background-color 0.2s ease-in-out,
+		box-shadow 0.2s ease-in-out;
+	-ms-transition: background-color 0.2s ease-in-out,
+		box-shadow 0.2s ease-in-out;
+	-o-transition: background-color 0.2s ease-in-out,
+		box-shadow 0.2s ease-in-out;
 }
 .resetbtn:hover {
+	box-shadow: 0px 0px 16px 0px var(--light-grayish-cyan);
 	background-color: var(--light-grayish-cyan);
 }
