--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 	background-color: var(--light-grayish-cyan);
 	height: 100vh;
 	font-size: 24px;
-	font-family: 'Space Mono', monospace;
+	font-family: "Space Mono", monospace;
 	display: grid;
 	place-items: center;
 }
@@ -41,14 +41,14 @@ body {
 	width: 55%;
 }
 
-#bill {
-	background: url('./images/icon-dollar.svg') no-repeat scroll 3% 50%;
+.bill__input {
+	background: url("./images/icon-dollar.svg") no-repeat scroll 3% 50%;
 }
-#number-of-people {
-	background: url('./images/icon-person.svg') no-repeat scroll 3% 50%;
+.number-of-people__input {
+	background: url("./images/icon-person.svg") no-repeat scroll 3% 50%;
 }
-#bill,
-#number-of-people {
+.bill__input,
+.number-of-people__input {
 	color: var(--very-dark-cyan);
 	font-weight: 700;
 	font-size: 1.5rem;
@@ -58,12 +58,24 @@ body {
 	border: none;
 	border-radius: 4px;
 	text-align: right;
-	font-family: 'Space Mono', monospace;
+	font-family: "Space Mono", monospace;
 }
+
+.restrict {
+	outline: solid 2px red;
+}
+.display-none {
+	display: none;
+}
+.restrict-alert {
+	margin-left: 5rem;
+	color: red;
+}
+
 input:focus {
 	outline: solid 2px var(--main-color-strong-cyan);
 }
-input[type='number'] {
+input[type="number"] {
 	-moz-appearance: textfield;
 }
 
@@ -116,16 +128,17 @@ input::-webkit-inner-spin-button {
 	color: var(--very-dark-cyan);
 }
 .tips__grid .custom {
-	margin-top: 1rem;
+	margin-top: 1.05rem;
 	color: var(--very-dark-cyan);
-	font-size: 1.2rem;
+	font-size: 1.6rem;
+	font-weight: 700;
 	background-color: var(--light-grayish-transparent-cyan);
 	border: none;
 	border-radius: 4px;
 	text-align: center;
-	font-family: 'Space Mono', monospace;
+	font-family: "Space Mono", monospace;
 	width: 80%;
-	padding: 0.8rem 0.5rem;
+	padding: 0rem 0.5rem;
 }
 .tips__grid .custom::placeholder {
 	font-weight: 600;
@@ -180,7 +193,7 @@ input::-webkit-inner-spin-button {
 	color: var(--main-color-strong-cyan);
 }
 .resetbtn {
-	font-family: 'Space Mono', monospace;
+	font-family: "Space Mono", monospace;
 	font-size: 1.2rem;
 	letter-spacing: 2px;
 	font-weight: 700;
@@ -203,4 +216,47 @@ input::-webkit-inner-spin-button {
 .resetbtn:hover {
 	box-shadow: 0px 0px 16px 0px var(--light-grayish-cyan);
 	background-color: var(--light-grayish-cyan);
+}
+@media (max-width: 960px) {
+	.restrict-alert {
+		margin-left: 3rem;
+	}
+}
+@media (max-width: 890px) {
+	.restrict-alert {
+		margin-left: 2rem;
+	}
+}
+@media (max-width: 860px) {
+	.restrict-alert {
+		margin-left: 0rem;
+	}
+}
+@media (max-width: 810px) {
+	.calculator-control {
+		padding-right: 0.8rem;
+	}
+}
+@media (max-width: 785px) {
+	.calculator {
+		padding: 1.8rem 0.5rem;
+	}
+	.calculator-result {
+		padding: 1rem 1.5rem;
+	}
+}
+@media (max-width: 690px) {
+	.calculator {
+		flex-direction: column;
+	}
+	.calculator-control {
+		width: 100%;
+	}
+	.calculator-result {
+		width: 100%;
+	}
+	.bill__input,
+	.number-of-people__input {
+		width: 95%;
+	}
 }
