--- a/style.css
+++ b/style.css
@@ -9,10 +9,11 @@
 * {
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
 }
 body {
 	background-color: var(--light-grayish-cyan);
-	height: 100vh;
+	min-height: 100vh;
 	font-size: 24px;
 	font-family: "Space Mono", monospace;
 	display: grid;
@@ -24,7 +25,7 @@ body {
 	background-color: var(--white);
 	max-width: 900px;
 	display: flex;
-	height: 25rem;
+	height: 30rem;
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
@@ -34,7 +35,7 @@ body {
 	-o-border-radius: 20px;
 }
 .calculator-control {
-	padding: 1rem 2rem 0 0;
+	padding: 0 2rem 0 0;
 	display: flex;
 	flex-direction: column;
 	height: 100%;
@@ -53,7 +54,7 @@ body {
 	font-weight: 700;
 	font-size: 1.5rem;
 	padding: 0.6rem 0.8rem 0.6rem 2rem;
-	width: 88%;
+	width: 95%;
 	background-color: var(--light-grayish-transparent-cyan);
 	border: none;
 	border-radius: 4px;
@@ -68,7 +69,7 @@ body {
 	display: none;
 }
 .restrict-alert {
-	margin-left: 5rem;
+	margin-left: 2rem;
 	color: red;
 }
 
@@ -130,7 +131,7 @@ input::-webkit-inner-spin-button {
 .tips__grid .custom {
 	margin-top: 1.05rem;
 	color: var(--very-dark-cyan);
-	font-size: 1.6rem;
+	font-size: 1.4rem;
 	font-weight: 700;
 	background-color: var(--light-grayish-transparent-cyan);
 	border: none;
@@ -142,7 +143,7 @@ input::-webkit-inner-spin-button {
 }
 .tips__grid .custom::placeholder {
 	font-weight: 600;
-	font-size: 1.5rem;
+	font-size: 1.3rem;
 	color: var(--very-dark-cyan);
 }
 .people label {
@@ -159,7 +160,7 @@ input::-webkit-inner-spin-button {
 	flex-direction: column;
 	justify-content: space-between;
 	padding: 1rem 3rem;
-	width: 40%;
+	width: 50%;
 	color: white;
 	border-radius: 10px;
 	height: 100%;
@@ -217,19 +218,14 @@ input::-webkit-inner-spin-button {
 	box-shadow: 0px 0px 16px 0px var(--light-grayish-cyan);
 	background-color: var(--light-grayish-cyan);
 }
-@media (max-width: 960px) {
-	.restrict-alert {
-		margin-left: 3rem;
-	}
-}
 @media (max-width: 890px) {
 	.restrict-alert {
-		margin-left: 2rem;
+		margin-left: 1rem;
 	}
 }
 @media (max-width: 860px) {
 	.restrict-alert {
-		margin-left: 0rem;
+		margin-left: -0.4rem
 	}
 }
 @media (max-width: 810px) {
@@ -245,18 +241,55 @@ input::-webkit-inner-spin-button {
 		padding: 1rem 1.5rem;
 	}
 }
-@media (max-width: 690px) {
+@media (max-width: 750px) {
+	.restrict-alert {
+		margin-left: -0.5rem;
+	}
+}
+@media (max-width: 700px) {
 	.calculator {
+		padding: 2rem 3rem;
+		padding-left: 3.2rem;
 		flex-direction: column;
+		height: min-content;
 	}
 	.calculator-control {
+		padding: 0;
 		width: 100%;
+		margin-bottom: 3rem;
 	}
 	.calculator-result {
 		width: 100%;
+		padding: 1rem 1rem;
+		margin: 0 1rem;
+	}
+	.calculator-result__total {
+		margin-bottom: 2rem;
 	}
 	.bill__input,
 	.number-of-people__input {
-		width: 95%;
+		width: 98%;
+	}
+	.tips__grid .button {
+		width: 90%;
+		margin-right: 1rem;
+	}
+	.tips__grid .custom {
+		width: 90%;
+	}
+	.restrict-alert {
+		margin-left: 1rem;
+	}
+	
+}
+@media (max-width: 500px) {
+	.tips__grid {
+		grid-template-rows: 1fr 1fr 1fr;
+		grid-template-columns: 1fr 1fr ;
+	}
+}
+@media (max-width: 480px) {
+	.restrict-alert {
+		margin: 0;
 	}
 }
