--- a/style.css
+++ b/style.css
@@ -12,12 +12,18 @@
 	box-sizing: border-box;
 }
 body {
+	padding: 2rem 0;
 	background-color: var(--light-grayish-cyan);
 	min-height: 100vh;
 	font-size: 24px;
-	font-family: "Space Mono", monospace;
-	display: grid;
-	place-items: center;
+	font-family: 'Space Mono', monospace;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+.logo {
+	margin-bottom: 4rem;
 }
 .calculator {
 	padding: 2rem;
@@ -43,10 +49,10 @@ body {
 }
 
 .bill__input {
-	background: url("./images/icon-dollar.svg") no-repeat scroll 3% 50%;
+	background: url('./images/icon-dollar.svg') no-repeat scroll 3% 50%;
 }
 .number-of-people__input {
-	background: url("./images/icon-person.svg") no-repeat scroll 3% 50%;
+	background: url('./images/icon-person.svg') no-repeat scroll 3% 50%;
 }
 .bill__input,
 .number-of-people__input {
@@ -59,7 +65,7 @@ body {
 	border: none;
 	border-radius: 4px;
 	text-align: right;
-	font-family: "Space Mono", monospace;
+	font-family: 'Space Mono', monospace;
 }
 
 .restrict {
@@ -76,7 +82,7 @@ body {
 input:focus {
 	outline: solid 2px var(--main-color-strong-cyan);
 }
-input[type="number"] {
+input[type='number'] {
 	-moz-appearance: textfield;
 }
 
@@ -137,7 +143,7 @@ input::-webkit-inner-spin-button {
 	border: none;
 	border-radius: 4px;
 	text-align: center;
-	font-family: "Space Mono", monospace;
+	font-family: 'Space Mono', monospace;
 	width: 80%;
 	padding: 0rem 0.5rem;
 }
@@ -159,7 +165,7 @@ input::-webkit-inner-spin-button {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	padding: 1rem 3rem;
+	padding: 1rem 2rem;
 	width: 50%;
 	color: white;
 	border-radius: 10px;
@@ -194,7 +200,7 @@ input::-webkit-inner-spin-button {
 	color: var(--main-color-strong-cyan);
 }
 .resetbtn {
-	font-family: "Space Mono", monospace;
+	font-family: 'Space Mono', monospace;
 	font-size: 1.2rem;
 	letter-spacing: 2px;
 	font-weight: 700;
@@ -225,7 +231,7 @@ input::-webkit-inner-spin-button {
 }
 @media (max-width: 860px) {
 	.restrict-alert {
-		margin-left: -0.4rem
+		margin-left: -0.4rem;
 	}
 }
 @media (max-width: 810px) {
@@ -280,12 +286,11 @@ input::-webkit-inner-spin-button {
 	.restrict-alert {
 		margin-left: 1rem;
 	}
-	
 }
 @media (max-width: 500px) {
 	.tips__grid {
 		grid-template-rows: 1fr 1fr 1fr;
-		grid-template-columns: 1fr 1fr ;
+		grid-template-columns: 1fr 1fr;
 	}
 }
 @media (max-width: 480px) {
