--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 	padding: 2rem 0;
 	background-color: var(--light-grayish-cyan);
 	min-height: 100vh;
+	width: 100%;
 	font-size: 24px;
 	font-family: 'Space Mono', monospace;
 	display: flex;
